--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
                     <div class="circle pi"></div>
                     <div class="circle pu"></div>
                 </div>
-                <div id="sbtm"></div>
+                <div id="sbtm">
+                    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, natus facere.</h3>
+                    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                </div>
                 <div id="footer">
                     <img src="https://d2kq0urxkarztv.cloudfront.net/59ee0858278cca00855b0b53/2496214/upload-7da2bf52-326a-4b5b-9a85-2f8a40469eaf.png?w=170&e=webp&nll=true" alt="">
                     <img src="https://d2kq0urxkarztv.cloudfront.net/59ee0858278cca00855b0b53/2496214/upload-ca69834f-5cb7-4340-b30d-c7ea66350641.png?w=163&e=webp&nll=true" alt="">
@@ -102,6 +105,8 @@
             </div>  
         </div>
     </div>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js" integrity="sha512-A64Nik4Ql7/W/PJk2RNOmVyC/Chobn5TY08CiKEX50Sdw+33WTOpPJ/63bfWPl0hxiRv1trPs5prKO8CpA7VNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
